# Sound-Localization-Based-On-A-Microphone-Array

./: LICENSE  README.md
ESP32_Visualization/: CMakeLists.txt
ESP32_Visualization/components/Inc/: microphone_config.h  sound_loc_processor.h  uart_driver.h  web_server.h  wifi_manager.h
ESP32_Visualization/components/Src/: sound_loc_processor.c  uart_driver.c  web_server.c  wifi_manager.c
ESP32_Visualization/main/: CMakeLists.txt  main.c
Sound Localization/: Sound Localization.ioc  Sound Localization.launch
Sound Localization/Core/CustomDriverSet/IncDriver/: adc_driver.h  app_init.h  audio_common.h  dma_driver.h  gpio_driver.h  i2c_driver.h  loc3d_3mic_time.h  mpu9250.h  raw_capture.h  sound_loc3d_4mic_time.h  timer_driver.h  uart_driver.h
Sound Localization/Core/CustomDriverSet/SrcDriver/: adc_driver.c  app_init.c  dma_driver.c  gpio_driver.c  i2c_driver.c  loc3d_3mic_time.c  mpu9250.c  raw_capture.c  sound_loc3d_4mic_time.c  timer_driver.c  uart_driver.c
Sound Localization/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  task_manager.h
Sound Localization/Core/Src/: main.c  stm32g4xx_it.c  task_manager.c
